fix duplicate /